tests/error/poly_errors/arg_mismatch9.err
Error: Type mismatch (at $FILE:14:23)
   | 
12 | @guppy
13 | def main(x: int, y: float) -> None:
14 |     foo[float, int](x, y)
   |                        ^ Expected argument of type `int`, got `float`

Guppy compilation failed due to 1 previous error
